syntax = "proto3";

import "Protos/Common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "PostFeedback.API";

package post;

service PostCRUD {

  rpc CreatePost (CreatePostRequest) returns (common.Response);
  rpc UpdatePost (UpdatePostRequest) returns (common.Response);
  rpc DeletePost (common.Request) returns (common.Response); 
  rpc GetPostById (common.Request) returns (PostResponse); 
  rpc GetPosts (FilterRequest) returns (PostList); 
}

service PostInfo {
  rpc GetAllCities (common.Empty) returns (CategoryCityList);
  rpc GetAllCategories (common.Empty) returns (CategoryCityList);
}

message CreatePostRequest {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Int64Value ownerId = 3;
  google.protobuf.Int64Value categoryId = 4;
  google.protobuf.Int64Value cityId = 5;
  google.protobuf.StringValue address = 6;
  google.protobuf.StringValue referencePoint = 7;
  google.protobuf.StringValue contactNumber = 8;
  google.protobuf.Int32Value roomsNo = 9;
  google.protobuf.Int32Value bathroomsNo = 10;
  google.protobuf.Int32Value bedsNo = 11;
  google.protobuf.Int32Value maxGuestsNo = 12;
  google.protobuf.Int32Value squareMeters = 13;
  google.protobuf.DoubleValue price = 14;
  google.protobuf.BoolValue isWholeApartment = 15;
  google.protobuf.Timestamp movingInTimeStamp = 16;
  google.protobuf.Timestamp movingOutTimeStamp = 17;
  google.protobuf.StringValue additionalInfo = 18;
}


message UpdatePostRequest {
int64 id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.Int64Value ownerId = 4;
  google.protobuf.Int64Value categoryId = 5;
  google.protobuf.Int64Value cityId = 6;
  google.protobuf.StringValue address = 7;
  google.protobuf.StringValue referencePoint = 8;
  google.protobuf.StringValue contactNumber = 9;
  google.protobuf.Int32Value roomsNo = 10;
  google.protobuf.Int32Value bathroomsNo = 11;
  google.protobuf.Int32Value bedsNo = 12;
  google.protobuf.Int32Value maxGuestsNo = 13;
  google.protobuf.Int32Value squareMeters = 14;
  google.protobuf.DoubleValue price = 15;
  google.protobuf.BoolValue isWholeApartment = 16;
  google.protobuf.Timestamp movingInTimeStamp = 17;
  google.protobuf.Timestamp movingOutTimeStamp = 18;
  google.protobuf.StringValue additionalInfo = 19;
}

message User {
int64 id = 1;
google.protobuf.StringValue firstName = 2;
google.protobuf.StringValue lastName = 3;
string email = 4;
google.protobuf.StringValue phoneNumber =5;
}

message PostResponse {
   int64 id = 1;
   string title = 2;
   google.protobuf.StringValue description = 3;
   User owner = 4;
   CategoryCity category = 5;
   CategoryCity city = 6;
   string address = 7;
   google.protobuf.StringValue referencePoint = 8;
   string contactNumber = 9;
   google.protobuf.Int32Value roomsNo = 10;
   google.protobuf.Int32Value bathroomsNo = 11;
   google.protobuf.Int32Value bedsNo = 12;
   int32 maxGuestsNo = 13;
   google.protobuf.Int32Value squareMeters = 14;
   double price = 15;
   google.protobuf.BoolValue isWholeApartment = 16;
   google.protobuf.StringValue additionalInfo = 17;
   google.protobuf.Timestamp datePublishedTimeStamp = 18;
   string movingInTime = 19;
   string movingOutTime = 20;
   repeated Photo photos = 21;
   repeated PostItem specificities = 22;
   repeated PostItem rules = 23;
   repeated PostItem facilities = 24;
   bool NoItem = 25;
}
message PostList {
	repeated PostResponse items = 1;
}
message PostItem {
int64 itemId = 1;
google.protobuf.StringValue otherValue = 2;
string item = 3;
}

message CategoryCity {
int64 id = 1;
string name = 2;
}

message CategoryCityList {
repeated CategoryCity items = 1;
}

message Photo {
int64 id = 1;
google.protobuf.BytesValue photo = 2;
google.protobuf.StringValue mimeType = 3;
}

message FilterRequest {
google.protobuf.StringValue searchText = 1;
google.protobuf.Int64Value owner = 2;
google.protobuf.Int64Value category = 3;
google.protobuf.Int64Value city = 4;
google.protobuf.Int32Value minRooms = 5;
google.protobuf.Int32Value maxRooms = 6;
google.protobuf.Int32Value minBeds = 7;
google.protobuf.Int32Value maxBeds = 8;
google.protobuf.Int32Value guests = 9;
google.protobuf.Int32Value minPrice = 10;
google.protobuf.Int32Value maxPrice = 11;
google.protobuf.BoolValue entireApartment = 12;
}


